--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ChatGPT Lab FR</title>
+    <title>VALERIA</title>
     <link
       rel="shortcut icon"
       href="#"
